manifests/bootstrapping/argocd/argocd-middleware-v3.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-redirect
  namespace: argocd
spec:
  redirectScheme:
    scheme: https
    permanent: true
