manifests/bootstrapping/argocd/argocd-dex-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      containers:
        - imagePullPolicy: IfNotPresent
          name: dex
