manifests/bootstrapping/argocd/argocd-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  gatewayClassName: traefik
  listeners:
  - name: websecure
    port: 443
    protocol: HTTPS
    hostname: argo.zelesny.com
    tls:
      mode: Terminate
      certificateRefs:
      - name: argo-zelesny-cert
        namespace: argocd
        kind: Secret
  - name: web
    port: 80
    protocol: HTTP
