manifests/bootstrapping/argocd/argocd-grpcroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: argocd-server-grpc
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  hostnames:
  - "argo.zelesny.com"
  rules:
  - matches:
    - headers:
      - name: Content-Type
        value: application/grpc
    backendRefs:
    - name: argocd-server
      port: 80
      weight: 1
