manifests/bootstrapping/argocd/argocd-httproute-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server-http-redirect
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  hostnames:
  - "argo.zelesny.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
        port: 443
