manifests/bootstrapping/argocd/argocd-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
  - name: argocd-gateway
    namespace: argocd
  hostnames:
  - "argo.zelesny.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: argocd-server
      port: 80
      weight: 1
