manifests/bootstrapping/argocd/argocd-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.zelesny.com`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
      middlewares:
        - name: redirect
    - kind: Rule
      match: Host(`argo.zelesny.com`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
      middlewares:
        - name: redirect
  tls:
    secretName: argo-zelesny-cert
